codead/target/generated-sources/antlr4/com/codeadbackend/codead/CodeadGrammarParser.java
// Generated from com\codeadbackend\codead\CodeadGrammar.g4 by ANTLR 4.7.1
package com.codeadbackend.codead;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CodeadGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NOT_BLANK_DECORATOR_OPEN=1, NOT_BLANK_DECORATOR=2, TIME_DECORATOR_OPEN=3, 
		TIME_DECORATOR=4, DECIMAL_DECORATOR_OPEN=5, DECIMAL_DECORATOR=6, INTEGER_DECORATOR_OPEN=7, 
		INTEGER_DECORATOR=8, MAX_DECORATOR_OPEN=9, MAX_DECORATOR=10, MIN_DECORATOR_OPEN=11, 
		MIN_DECORATOR=12, NULLABLE_DECORATOR_OPEN=13, NULLABLE_DECORATOR=14, UNIQUE_DECORATOR_OPEN=15, 
		UNIQUE_DECORATOR=16, DECORATOR_CLOSE=17, BOOLEAN=18, TIME=19, BYTE_KEY=20, 
		SHORT_KEY=21, INT_KEY=22, LONG_KEY=23, FLOAT_KEY=24, DOUBLE_KEY=25, BOOLEAN_KEY=26, 
		STRING_KEY=27, LOCAL_DATE_KEY=28, DECIMAL_NUMBER=29, INTEGER_NUMBER=30, 
		NATURAL_NUMBER=31, ID_CAMEL_CASE=32, ID_PASCAL_CASE=33, WS=34;
	public static final int
		RULE_program = 0, RULE_column = 1, RULE_relation = 2, RULE_relationDecorators = 3, 
		RULE_field = 4, RULE_localDateField = 5, RULE_localDate = 6, RULE_localDateDecorators = 7, 
		RULE_stringField = 8, RULE_string = 9, RULE_stringDecorators = 10, RULE_booleanField = 11, 
		RULE_myboolean = 12, RULE_booleanDecorators = 13, RULE_floatDoubleField = 14, 
		RULE_floatDouble = 15, RULE_floatDoubleDecorators = 16, RULE_byteShortIntLongField = 17, 
		RULE_byteShortIntLong = 18, RULE_byteShortIntLongDecorators = 19, RULE_columnDecorators = 20, 
		RULE_notBlankDecorator = 21, RULE_timeDecorator = 22, RULE_decimalDecorator = 23, 
		RULE_integerDecorator = 24, RULE_maxDecorator = 25, RULE_minDecorator = 26, 
		RULE_nullableDecorator = 27, RULE_uniqueDecorator = 28;
	public static final String[] ruleNames = {
		"program", "column", "relation", "relationDecorators", "field", "localDateField", 
		"localDate", "localDateDecorators", "stringField", "string", "stringDecorators", 
		"booleanField", "myboolean", "booleanDecorators", "floatDoubleField", 
		"floatDouble", "floatDoubleDecorators", "byteShortIntLongField", "byteShortIntLong", 
		"byteShortIntLongDecorators", "columnDecorators", "notBlankDecorator", 
		"timeDecorator", "decimalDecorator", "integerDecorator", "maxDecorator", 
		"minDecorator", "nullableDecorator", "uniqueDecorator"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'@NotBlank'", null, "'@Time'", null, "'@Decimal'", null, 
		"'@Integer'", null, "'@Max'", null, "'@Min'", null, "'@Nullable'", null, 
		"'@Unique'", "')'", null, null, "'byte'", "'short'", "'int'", "'long'", 
		"'float'", "'double'", "'boolean'", "'String'", "'LocalDate'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NOT_BLANK_DECORATOR_OPEN", "NOT_BLANK_DECORATOR", "TIME_DECORATOR_OPEN", 
		"TIME_DECORATOR", "DECIMAL_DECORATOR_OPEN", "DECIMAL_DECORATOR", "INTEGER_DECORATOR_OPEN", 
		"INTEGER_DECORATOR", "MAX_DECORATOR_OPEN", "MAX_DECORATOR", "MIN_DECORATOR_OPEN", 
		"MIN_DECORATOR", "NULLABLE_DECORATOR_OPEN", "NULLABLE_DECORATOR", "UNIQUE_DECORATOR_OPEN", 
		"UNIQUE_DECORATOR", "DECORATOR_CLOSE", "BOOLEAN", "TIME", "BYTE_KEY", 
		"SHORT_KEY", "INT_KEY", "LONG_KEY", "FLOAT_KEY", "DOUBLE_KEY", "BOOLEAN_KEY", 
		"STRING_KEY", "LOCAL_DATE_KEY", "DECIMAL_NUMBER", "INTEGER_NUMBER", "NATURAL_NUMBER", 
		"ID_CAMEL_CASE", "ID_PASCAL_CASE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CodeadGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodeadGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CodeadGrammarParser.EOF, 0); }
		public List<ColumnContext> column() {
			return getRuleContexts(ColumnContext.class);
		}
		public ColumnContext column(int i) {
			return getRuleContext(ColumnContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58);
				column();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT_BLANK_DECORATOR_OPEN) | (1L << NOT_BLANK_DECORATOR) | (1L << TIME_DECORATOR_OPEN) | (1L << TIME_DECORATOR) | (1L << DECIMAL_DECORATOR_OPEN) | (1L << DECIMAL_DECORATOR) | (1L << INTEGER_DECORATOR_OPEN) | (1L << INTEGER_DECORATOR) | (1L << MAX_DECORATOR_OPEN) | (1L << MAX_DECORATOR) | (1L << MIN_DECORATOR_OPEN) | (1L << MIN_DECORATOR) | (1L << NULLABLE_DECORATOR_OPEN) | (1L << NULLABLE_DECORATOR) | (1L << UNIQUE_DECORATOR_OPEN) | (1L << UNIQUE_DECORATOR) | (1L << BYTE_KEY) | (1L << SHORT_KEY) | (1L << INT_KEY) | (1L << LONG_KEY) | (1L << FLOAT_KEY) | (1L << DOUBLE_KEY) | (1L << BOOLEAN_KEY) | (1L << STRING_KEY) | (1L << LOCAL_DATE_KEY) | (1L << ID_PASCAL_CASE))) != 0) );
			setState(63);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ColumnContext extends ParserRuleContext {
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public ColumnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterColumn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitColumn(this);
		}
	}

	public final ColumnContext column() throws RecognitionException {
		ColumnContext _localctx = new ColumnContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_column);
		try {
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				relation();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(66);
				field();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public TerminalNode ID_PASCAL_CASE() { return getToken(CodeadGrammarParser.ID_PASCAL_CASE, 0); }
		public TerminalNode ID_CAMEL_CASE() { return getToken(CodeadGrammarParser.ID_CAMEL_CASE, 0); }
		public List<RelationDecoratorsContext> relationDecorators() {
			return getRuleContexts(RelationDecoratorsContext.class);
		}
		public RelationDecoratorsContext relationDecorators(int i) {
			return getRuleContext(RelationDecoratorsContext.class,i);
		}
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterRelation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitRelation(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_relation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULLABLE_DECORATOR_OPEN) | (1L << NULLABLE_DECORATOR) | (1L << UNIQUE_DECORATOR_OPEN) | (1L << UNIQUE_DECORATOR))) != 0)) {
				{
				{
				setState(69);
				relationDecorators();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(ID_PASCAL_CASE);
			setState(76);
			match(ID_CAMEL_CASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationDecoratorsContext extends ParserRuleContext {
		public ColumnDecoratorsContext columnDecorators() {
			return getRuleContext(ColumnDecoratorsContext.class,0);
		}
		public RelationDecoratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationDecorators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterRelationDecorators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitRelationDecorators(this);
		}
	}

	public final RelationDecoratorsContext relationDecorators() throws RecognitionException {
		RelationDecoratorsContext _localctx = new RelationDecoratorsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relationDecorators);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			columnDecorators();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldContext extends ParserRuleContext {
		public LocalDateFieldContext localDateField() {
			return getRuleContext(LocalDateFieldContext.class,0);
		}
		public StringFieldContext stringField() {
			return getRuleContext(StringFieldContext.class,0);
		}
		public BooleanFieldContext booleanField() {
			return getRuleContext(BooleanFieldContext.class,0);
		}
		public FloatDoubleFieldContext floatDoubleField() {
			return getRuleContext(FloatDoubleFieldContext.class,0);
		}
		public ByteShortIntLongFieldContext byteShortIntLongField() {
			return getRuleContext(ByteShortIntLongFieldContext.class,0);
		}
		public FieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitField(this);
		}
	}

	public final FieldContext field() throws RecognitionException {
		FieldContext _localctx = new FieldContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_field);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				localDateField();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				stringField();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				booleanField();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				floatDoubleField();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				byteShortIntLongField();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalDateFieldContext extends ParserRuleContext {
		public LocalDateContext localDate() {
			return getRuleContext(LocalDateContext.class,0);
		}
		public TerminalNode ID_CAMEL_CASE() { return getToken(CodeadGrammarParser.ID_CAMEL_CASE, 0); }
		public List<LocalDateDecoratorsContext> localDateDecorators() {
			return getRuleContexts(LocalDateDecoratorsContext.class);
		}
		public LocalDateDecoratorsContext localDateDecorators(int i) {
			return getRuleContext(LocalDateDecoratorsContext.class,i);
		}
		public LocalDateFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDateField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterLocalDateField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitLocalDateField(this);
		}
	}

	public final LocalDateFieldContext localDateField() throws RecognitionException {
		LocalDateFieldContext _localctx = new LocalDateFieldContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_localDateField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TIME_DECORATOR_OPEN) | (1L << TIME_DECORATOR) | (1L << NULLABLE_DECORATOR_OPEN) | (1L << NULLABLE_DECORATOR) | (1L << UNIQUE_DECORATOR_OPEN) | (1L << UNIQUE_DECORATOR))) != 0)) {
				{
				{
				setState(87);
				localDateDecorators();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			localDate();
			setState(94);
			match(ID_CAMEL_CASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalDateContext extends ParserRuleContext {
		public TerminalNode LOCAL_DATE_KEY() { return getToken(CodeadGrammarParser.LOCAL_DATE_KEY, 0); }
		public LocalDateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterLocalDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitLocalDate(this);
		}
	}

	public final LocalDateContext localDate() throws RecognitionException {
		LocalDateContext _localctx = new LocalDateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_localDate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(LOCAL_DATE_KEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocalDateDecoratorsContext extends ParserRuleContext {
		public ColumnDecoratorsContext columnDecorators() {
			return getRuleContext(ColumnDecoratorsContext.class,0);
		}
		public TimeDecoratorContext timeDecorator() {
			return getRuleContext(TimeDecoratorContext.class,0);
		}
		public LocalDateDecoratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_localDateDecorators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterLocalDateDecorators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitLocalDateDecorators(this);
		}
	}

	public final LocalDateDecoratorsContext localDateDecorators() throws RecognitionException {
		LocalDateDecoratorsContext _localctx = new LocalDateDecoratorsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_localDateDecorators);
		try {
			setState(100);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULLABLE_DECORATOR_OPEN:
			case NULLABLE_DECORATOR:
			case UNIQUE_DECORATOR_OPEN:
			case UNIQUE_DECORATOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				columnDecorators();
				}
				break;
			case TIME_DECORATOR_OPEN:
			case TIME_DECORATOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				timeDecorator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringFieldContext extends ParserRuleContext {
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public TerminalNode ID_CAMEL_CASE() { return getToken(CodeadGrammarParser.ID_CAMEL_CASE, 0); }
		public List<StringDecoratorsContext> stringDecorators() {
			return getRuleContexts(StringDecoratorsContext.class);
		}
		public StringDecoratorsContext stringDecorators(int i) {
			return getRuleContext(StringDecoratorsContext.class,i);
		}
		public StringFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterStringField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitStringField(this);
		}
	}

	public final StringFieldContext stringField() throws RecognitionException {
		StringFieldContext _localctx = new StringFieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stringField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NOT_BLANK_DECORATOR_OPEN) | (1L << NOT_BLANK_DECORATOR) | (1L << MAX_DECORATOR_OPEN) | (1L << MAX_DECORATOR) | (1L << MIN_DECORATOR_OPEN) | (1L << MIN_DECORATOR) | (1L << NULLABLE_DECORATOR_OPEN) | (1L << NULLABLE_DECORATOR) | (1L << UNIQUE_DECORATOR_OPEN) | (1L << UNIQUE_DECORATOR))) != 0)) {
				{
				{
				setState(102);
				stringDecorators();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			string();
			setState(109);
			match(ID_CAMEL_CASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING_KEY() { return getToken(CodeadGrammarParser.STRING_KEY, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(STRING_KEY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringDecoratorsContext extends ParserRuleContext {
		public ColumnDecoratorsContext columnDecorators() {
			return getRuleContext(ColumnDecoratorsContext.class,0);
		}
		public MinDecoratorContext minDecorator() {
			return getRuleContext(MinDecoratorContext.class,0);
		}
		public MaxDecoratorContext maxDecorator() {
			return getRuleContext(MaxDecoratorContext.class,0);
		}
		public NotBlankDecoratorContext notBlankDecorator() {
			return getRuleContext(NotBlankDecoratorContext.class,0);
		}
		public StringDecoratorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringDecorators; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterStringDecorators(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitStringDecorators(this);
		}
	}

	public final StringDecoratorsContext stringDecorators() throws RecognitionException {
		StringDecoratorsContext _localctx = new StringDecoratorsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_stringDecorators);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULLABLE_DECORATOR_OPEN:
			case NULLABLE_DECORATOR:
			case UNIQUE_DECORATOR_OPEN:
			case UNIQUE_DECORATOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				columnDecorators();
				}
				break;
			case MIN_DECORATOR_OPEN:
			case MIN_DECORATOR:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				minDecorator();
				}
				break;
			case MAX_DECORATOR_OPEN:
			case MAX_DECORATOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				maxDecorator();
				}
				break;
			case NOT_BLANK_DECORATOR_OPEN:
			case NOT_BLANK_DECORATOR:
				enterOuterAlt(_localctx, 4);
				{
				setState(116);
				notBlankDecorator();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanFieldContext extends ParserRuleContext {
		public MybooleanContext myboolean() {
			return getRuleContext(MybooleanContext.class,0);
		}
		public TerminalNode ID_CAMEL_CASE() { return getToken(CodeadGrammarParser.ID_CAMEL_CASE, 0); }
		public List<BooleanDecoratorsContext> booleanDecorators() {
			return getRuleContexts(BooleanDecoratorsContext.class);
		}
		public BooleanDecoratorsContext booleanDecorators(int i) {
			return getRuleContext(BooleanDecoratorsContext.class,i);
		}
		public BooleanFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).enterBooleanField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodeadGrammarListener ) ((CodeadGrammarListener)listener).exitBooleanField(this);
		}
	}
